--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
 exceptiongroup==1.1.1
 flake8==6.0.0
+gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
 inflection==0.5.1
