--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Django==4.2.1
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==3.14.0
+django-filter==23.2
 django-timezone-field==5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
